[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/world/cabin/cabin.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world/bird/bird_spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/people/people.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world/world.gd" type="Script" id=4]
[ext_resource path="res://scenes/world/people/jen/jen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/world/copter/copter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/world/people/jimmy/jimmy.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/world/people/eric/eric.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/world/people/stephanie/stephanie.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/montagne/montagne.png" type="Texture" id=10]
[ext_resource path="res://assets/sky.png" type="Texture" id=11]
[ext_resource path="res://assets/rocko.ttf" type="DynamicFontData" id=13]

[sub_resource type="GDScript" id=1]
script/source = "extends \"res://scenes/world/cabin/cabin.gd\"


# Declare member variables here. Examples:
# var a: int = 2
# var b: String = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta: float) -> void:
#	pass
"

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.05
rough = true

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 595.985, 277.889 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Sky" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -10
texture = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.531987, 0.537977 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="montagne" type="Sprite" parent="."]
position = Vector2( 0, 172 )
scale = Vector2( 0.140169, 0.140169 )
texture = ExtResource( 10 )

[node name="Cabin" parent="." instance=ExtResource( 1 )]
script = SubResource( 1 )

[node name="Eric" parent="." instance=ExtResource( 8 )]
position = Vector2( 50, 41 )
collision_layer = 4
collision_mask = 68
speed = 5.0

[node name="Stephanie" parent="." instance=ExtResource( 9 )]
position = Vector2( 94, 38 )
collision_layer = 2
collision_mask = 66
speed = 7.0

[node name="People" parent="." instance=ExtResource( 3 )]
position = Vector2( -41, 42 )
collision_layer = 2
collision_mask = 66
physics_material_override = SubResource( 2 )
speed = 6.0

[node name="Jen" parent="." instance=ExtResource( 5 )]
position = Vector2( -14, 43 )
collision_layer = 2
collision_mask = 66
speed = 10.0

[node name="Jimmy" parent="." instance=ExtResource( 7 )]
position = Vector2( -89, 43 )
collision_layer = 4
collision_mask = 68
speed = 5.0

[node name="BirdSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( -250.084, 90.1639 )
scale = Vector2( 2.0001, 0.913346 )

[node name="Copter" parent="." instance=ExtResource( 6 )]
position = Vector2( -1.28244, -338.618 )

[node name="AreaLose" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLose"]
position = Vector2( 0.670532, 447.485 )
shape = SubResource( 3 )

[node name="AreaWin" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaWin"]
position = Vector2( -2.41553, -474.936 )
shape = SubResource( 3 )

[node name="LabelWin" type="Label" parent="."]
margin_left = -104.138
margin_top = -100.0
margin_right = 102.862
margin_bottom = -50.0
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLose" type="Label" parent="."]
margin_left = -165.0
margin_top = -60.0
margin_right = 41.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.701961, 0.0862745, 0.0862745, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
